// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <span
    class="icon other-class"
  >
    <i
      class="mdi mdi-bars"
    />
  </span>
</DocumentFragment>
`;

exports[`Icon component should render 1`] = `
<DocumentFragment>
  <span
    class="icon"
  >
    <i
      class="mdi mdi-bars"
    />
  </span>
</DocumentFragment>
`;
